event registration page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,6 +180,9 @@ header .header-data .header-right h4::before {
     padding: 7px 24px;
   }
 }
+.main .main-data .main-tab-box .main-left-data .main-border.fix {
+  border-color: #f6774e !important;
+}
 .main .main-data .main-tab-box .main-left-data .main-border:hover {
   cursor: pointer;
 }
@@ -3429,6 +3432,10 @@ button:focus:not(:focus-visible) {
   background: #555;
 }
 
+.custm-col {
+  display: none;
+}
+
 .register-list img {
   width: 100%;
   object-fit: cover;
@@ -3438,14 +3445,39 @@ button:focus:not(:focus-visible) {
 .register-list-form {
   margin-bottom: 87px;
 }
+@media (max-width: 768px) {
+  .register-list-form {
+    margin-bottom: 40px;
+  }
+}
 .register-list-form .form-list {
   background-color: #F6774E;
-  margin: 0 160px;
+  margin: 0 100px 0 160px;
   padding: 14px 20px;
   border-radius: 10px;
 }
+@media (max-width: 1440px) {
+  .register-list-form .form-list {
+    margin: 0 19px 0 66px;
+  }
+}
+@media (max-width: 768px) {
+  .register-list-form .form-list {
+    margin: 0 19px 0 19px;
+  }
+}
+@media (max-width: 575px) {
+  .register-list-form .form-list {
+    margin: 0;
+  }
+}
 .register-list-form .form-list .form-list-data input {
-  height: 50px;
+  padding-top: 11px;
+  padding-bottom: 12px !important;
+}
+.register-list-form .form-list .form-list-data input:focus {
+  outline: none;
+  box-shadow: none;
 }
 .register-list-form .form-list .form-list-data input::placeholder {
   color: #9A9A9A;
@@ -3454,16 +3486,88 @@ button:focus:not(:focus-visible) {
   letter-spacing: 5px;
   font-weight: 500;
 }
+.register-list-form .form-list .form-list-data .custom-checkbox {
+  position: relative;
+  display: inline-block;
+  width: 17px;
+  height: 18px;
+  border: 1px solid #555555;
+  border-radius: 2px;
+  margin-right: 4px;
+}
+@media (max-width: 575px) {
+  .register-list-form .form-list .form-list-data .custom-checkbox {
+    width: 30px;
+    height: 30px;
+  }
+}
+.register-list-form .form-list .form-list-data .custom-checkbox input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 17px;
+  width: 18px;
+}
+.register-list-form .form-list .form-list-data .custom-checkbox input:focus {
+  outline: none;
+  box-shadow: none;
+}
+.register-list-form .form-list .form-list-data .custom-checkbox input:checked ~ .checkmark:after {
+  display: block;
+}
+@media (max-width: 575px) {
+  .register-list-form .form-list .form-list-data .custom-checkbox input {
+    width: 30px;
+    height: 30px;
+  }
+}
+.register-list-form .form-list .form-list-data .custom-checkbox .checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: auto;
+  width: 18px;
+  background-color: #fff;
+}
+.register-list-form .form-list .form-list-data .custom-checkbox .checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+  left: 4px;
+  top: 0px;
+  width: 8px;
+  height: 12px;
+  border: solid #F6774E;
+  border-width: 0 3px 3px 0;
+  transform: rotate(45deg);
+}
+@media (max-width: 575px) {
+  .register-list-form .form-list .form-list-data .custom-checkbox .checkmark:after {
+    left: 9px;
+    top: 2px;
+    width: 10px;
+    height: 20px;
+  }
+}
+.register-list-form .form-list .form-list-data .custom-checkbox input:checked ~ .checkmark {
+  background-color: #2196f3;
+}
 .register-list-form .form-list .form-list-data .btn {
   font-size: 20px;
   line-height: 28px;
   font-weight: 700;
   color: #444444;
 }
+@media (max-width: 575px) {
+  .register-list-form .form-list .form-list-data .btn {
+    font-size: 16px;
+    line-height: 22px;
+  }
+}
 .register-list-form .form-list .form-list-data .btn1 {
   color: #ffffff;
   border: 2px solid #ffffff;
-  border-radius: 20px;
+  border-radius: 30px;
   padding: 10px 15px;
   margin-right: 9px;
   width: 100%;
@@ -3471,41 +3575,185 @@ button:focus:not(:focus-visible) {
 }
 @media (max-width: 1440px) {
   .register-list-form .form-list .form-list-data .btn1 {
+    padding: 10px 4px;
+  }
+}
+@media (max-width: 575px) {
+  .register-list-form .form-list .form-list-data .btn1 {
+    border-radius: 40px;
     width: 140px;
+    margin-right: 32px;
   }
 }
 .register-list-form .form-list .form-list-data .btn2 {
   background-color: #FBEE6C;
   color: #000;
   padding: 10px 18px 10px 24px;
-  border-radius: 20px;
+  border-radius: 25px;
   width: 70%;
   letter-spacing: 5px;
 }
 @media (max-width: 1440px) {
+  .register-list-form .form-list .form-list-data .btn2 {
+    padding: 10px 10px 10px 16px;
+  }
+}
+@media (max-width: 575px) {
   .register-list-form .form-list .form-list-data .btn2 {
     width: 99px;
   }
 }
 .register-list-form .form-list .form-list-data .form-list-content {
   background-color: #FFFEEF;
-  padding: 26px 24px;
+  padding: 26px 143px 26px 24px;
   margin-top: 39px;
   border-radius: 5px;
+}
+@media (max-width: 768px) {
+  .register-list-form .form-list .form-list-data .form-list-content {
+    padding: 26px 24px 26px 24px;
+  }
+}
+@media (max-width: 575px) {
+  .register-list-form .form-list .form-list-data .form-list-content {
+    padding: 8px 13px 20px 13px;
+    margin-top: 29px;
+  }
+}
+.register-list-form .form-list .form-list-data .form-list-content .form-data {
+  display: flex;
+  gap: 15px;
+  margin-bottom: 21px;
+}
+@media (max-width: 575px) {
+  .register-list-form .form-list .form-list-data .form-list-content .form-data {
+    flex-direction: column;
+  }
+}
+.register-list-form .form-list .form-list-data .form-list-content .form-data:last-child {
+  margin-bottom: 0;
+}
+.register-list-form .form-list .form-list-data .form-list-content .form-data h3 {
+  color: #F6774E;
+  font-size: 16px;
+  font-weight: 700;
+  letter-spacing: 5px;
+  line-height: 22px;
+  margin-bottom: 0;
+  width: 90px;
+}
+.register-list-form .form-list .form-list-data .form-list-content .form-data h3.form-h3 {
+  width: 170px;
+}
+.register-list-form .form-list .form-list-data .form-list-content .form-data ul {
+  display: flex;
+  flex-wrap: wrap;
+  width: 800px;
+}
+@media (max-width: 575px) {
+  .register-list-form .form-list .form-list-data .form-list-content .form-data ul {
+    width: auto;
+  }
+}
+.register-list-form .form-list .form-list-data .form-list-content .form-data ul.col01 {
+  gap: 30px;
+}
+.register-list-form .form-list .form-list-data .form-list-content .form-data ul.col02 {
+  gap: 10px;
+}
+@media (max-width: 575px) {
+  .register-list-form .form-list .form-list-data .form-list-content .form-data ul.col02 {
+    gap: 29px;
+  }
+}
+.register-list-form .form-list .form-list-data .form-list-content .form-data ul li {
+  display: flex;
+  color: #555555;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 500;
+}
+@media (max-width: 575px) {
+  .register-list-form .form-list .form-list-data .form-list-content .form-data ul li {
+    align-items: center;
+  }
+}
+.register-list-form .form-list .form-list-data .form-list-content .form-data ul li input {
+  border: 1px solid #555555 !important;
+  color: #555555;
+  margin: 0 10px;
+}
+.register-list-form .form-list .form-list-data .form-list-content .form-data ul li input.input-text {
+  width: 154px;
+  height: 32px;
+}
+@media (max-width: 575px) {
+  .register-list-form .form-list .form-list-data .form-list-content .form-data ul li input.input-text {
+    width: 137px;
+  }
+}
+@media (max-width: 375px) {
+  .register-list-form .form-list .form-list-data .form-list-content .form-data ul li input.input-text {
+    width: 109px;
+  }
+}
+@media (max-width: 320px) {
+  .register-list-form .form-list .form-list-data .form-list-content .form-data ul li input.input-text {
+    width: 85px;
+  }
+}
+@keyframes moveUpDown {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(10px);
+  }
+}
+.register-list-form .form-list .form-list-data .btm-errow {
+  text-align: end;
+  margin-top: 13px;
+  cursor: pointer;
+}
+.register-list-form .form-list .form-list-data .btm-errow img {
+  animation: moveUpDown 0.5s linear infinite alternate;
 }
 
 .list-slider {
   padding-left: 85px;
+}
+@media (max-width: 575px) {
+  .list-slider {
+    padding-left: 0;
+  }
 }
 .list-slider .list-slider-left {
   position: relative;
 }
 .list-slider .list-slider-left .left-img {
   width: 70%;
+  margin-top: 40px;
 }
 @media (max-width: 1199px) {
   .list-slider .list-slider-left .left-img {
     width: auto;
+  }
+}
+@media (max-width: 1024px) {
+  .list-slider .list-slider-left .left-img {
+    width: 75%;
+  }
+}
+@media (max-width: 768px) {
+  .list-slider .list-slider-left .left-img {
+    margin-top: 0;
+    margin-bottom: 20px;
+    width: 75%;
+  }
+}
+@media (max-width: 575px) {
+  .list-slider .list-slider-left .left-img {
+    width: 66%;
   }
 }
 .list-slider .list-slider-left h2 {
@@ -3522,7 +3770,60 @@ button:focus:not(:focus-visible) {
   width: 100%;
   max-width: 200px;
 }
+@media (max-width: 1024px) {
+  .list-slider .list-slider-left h2 {
+    right: -60px;
+  }
+}
+@media (max-width: 575px) {
+  .list-slider .list-slider-left h2 {
+    font-size: 50px;
+    max-width: 116px;
+    top: 25px;
+    right: 8px;
+  }
+}
+@media (max-width: 375px) {
+  .list-slider .list-slider-left h2 {
+    right: 0;
+  }
+}
+@media (max-width: 375px) {
+  .list-slider .list-slider-left h2 {
+    top: 10px;
+  }
+}
+@media (max-width: 320px) {
+  .list-slider .list-slider-left h2 {
+    line-height: 58px;
+    font-size: 40px;
+    right: -25px;
+  }
+}
 .list-slider .list-slider-left .btn {
+  position: absolute;
+  right: 41px;
+  bottom: -50px;
+  background-color: #FBEE6C;
+  padding: 14px 51px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 27px;
+  color: #444444;
+  letter-spacing: 7px;
+  border-radius: 20px;
+}
+@media (max-width: 1024px) {
+  .list-slider .list-slider-left .btn {
+    right: 0;
+  }
+}
+@media (max-width: 768px) {
+  .list-slider .list-slider-left .btn.btn-yel-parent {
+    display: none;
+  }
+}
+.list-slider .btn-yel {
   background-color: #FBEE6C;
   padding: 14px 51px;
   font-size: 20px;
@@ -3543,6 +3844,7 @@ button:focus:not(:focus-visible) {
 }
 .slider .slide-card .slider-data {
   padding: 27px 15px 47px 15px;
+  height: 246px;
 }
 .slider .slide-card .content {
   margin-bottom: 12px;
@@ -3565,36 +3867,26 @@ button:focus:not(:focus-visible) {
 .slider .slide-card ul li img {
   object-fit: contain;
 }
-.slider .owl-carousel .owl-dots .owl-dot {
-  width: 15px;
-  height: 15px;
-  margin: 5px;
-  background: #c20e0e;
-  border-radius: 50%;
-}
-.slider .owl-carousel .owl-dots .owl-dot.active {
-  background: #000;
-}
-.slider .owl-carousel .owl-dots {
-  text-align: center;
-  margin-top: 20px;
-}
-.slider .owl-dots {
-  margin-top: 0;
-}
-.slider .owl-nav {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
 
 .btm-slider {
   background-color: #F0F9F3;
-  padding: 28px 75px 68px 40px;
+  padding: 28px 75px 48px 40px;
   margin-top: 74px;
+}
+@media (max-width: 575px) {
+  .btm-slider {
+    margin-top: 35px;
+    padding: 0;
+    padding-top: 30px;
+  }
 }
 .btm-slider .left-btm-data {
   position: relative;
+}
+@media (max-width: 575px) {
+  .btm-slider .left-btm-data .empty {
+    padding-left: 50px;
+  }
 }
 .btm-slider .left-btm-data .empty .div1 {
   background-color: #31b762;
@@ -3610,6 +3902,11 @@ button:focus:not(:focus-visible) {
   height: 20px;
   width: 131px;
 }
+@media (max-width: 575px) {
+  .btm-slider .left-btm-data .empty .div2 {
+    left: 15px;
+  }
+}
 .btm-slider .left-btm-data .strock-h2 h2 {
   font-size: 60px;
   line-height: 82px;
@@ -3622,6 +3919,11 @@ button:focus:not(:focus-visible) {
   max-width: 192px;
   margin-bottom: 30px;
 }
+@media (max-width: 575px) {
+  .btm-slider .left-btm-data .strock-h2 h2 {
+    text-align: end;
+  }
+}
 .btm-slider .left-btm-data .btn {
   background-color: #FBEE6C;
   font-weight: 700;
@@ -3633,6 +3935,140 @@ button:focus:not(:focus-visible) {
   border-radius: 20px;
   width: 100%;
   max-width: 100px;
+}
+.btm-slider .btn-yel2 {
+  background-color: #FBEE6C;
+  font-weight: 700;
+  line-height: 28px;
+  letter-spacing: 5px;
+  font-size: 20px;
+  color: #444444;
+  padding: 15px 12px;
+  border-radius: 20px;
+  width: 200px;
+  margin-bottom: 32px;
+}
+
+.owl-theme .owl-dots {
+  text-align: start;
+}
+@media (max-width: 768px) {
+  .owl-theme .owl-dots {
+    text-align: center;
+    margin-bottom: 19px;
+  }
+}
+.owl-theme .owl-dots .owl-dot {
+  border: 1px solid #787878;
+  border-radius: 50%;
+  width: 19px;
+  height: 19px;
+  margin-right: 12px;
+}
+.owl-theme .owl-dots .owl-dot span {
+  width: 17px;
+  height: 17px;
+  background-color: transparent;
+  display: inline-block;
+  border-radius: 50%;
+  margin: 0;
+}
+.owl-theme .owl-dots .owl-dot.active {
+  border-color: #F6774E !important;
+}
+.owl-theme .owl-dots .owl-dot.active span {
+  background-color: #F6774E !important;
+}
+.owl-theme .owl-dots .owl-dot.active span:active {
+  background-color: #F6774E !important;
+}
+.owl-theme .owl-dots .owl-dot.active span:hover {
+  background-color: #F6774E !important;
+}
+
+.owl-dots {
+  margin-top: 0;
+}
+
+.owl-carousel1 .owl-nav {
+  position: absolute;
+  top: 35%;
+  left: -48px;
+  display: block;
+}
+.owl-carousel1 .owl-nav .owl-prev {
+  top: 40%;
+  right: -20px;
+  position: absolute;
+  width: 44px;
+  height: 44px;
+  border-radius: 50% !important;
+  background: #31B762 !important;
+}
+.owl-carousel1 .owl-nav .owl-next {
+  display: none;
+  opacity: 0;
+}
+
+.owl-carousel2 .owl-nav {
+  position: absolute;
+  top: 35%;
+  right: -48px;
+  display: block;
+}
+.owl-carousel2 .owl-nav .owl-next {
+  top: 40%;
+  right: -20px;
+  position: absolute;
+  width: 44px;
+  height: 44px;
+  border-radius: 50% !important;
+  background: #31B762 !important;
+}
+.owl-carousel2 .owl-nav .owl-prev {
+  display: none;
+  opacity: 0;
+}
+
+.owl-carousel2 .owl-dots.disabled {
+  display: block;
+}
+.owl-carousel2 .owl-nav.disabled {
+  display: block !important;
+}
+
+.custom-none {
+  display: none;
+}
+@media (max-width: 768px) {
+  .custom-none {
+    display: block;
+  }
+}
+
+.custom-none1 {
+  display: none;
+}
+@media (max-width: 575px) {
+  .custom-none1 {
+    display: block;
+  }
+}
+
+.mobile-show-btn {
+  margin-top: 19px;
+}
+
+.owl-theme .owl-dots .owl-dot span {
+  height: 18px;
+}
+
+.hidden {
+  display: none;
+}
+
+.form-data {
+  margin-bottom: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
